# forum-meucci

./: README.md
src/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  nixpacks.toml
src/backend/.sqlx/: query-04da3765827be0acbb19ca71198d1fd6212bec7afe73544539954ce21bec2a94.json  query-04dd10fae294ab4b0f63e1f99fb96f62af5050f832c9337985c183464004700b.json  query-07e1fc3ac30b74d46352085f93e9f4eaec08d133d6dbaac1cfd71759ec2035af.json  query-0aac48bfbdb1792affaa0ee0747203251fa360281fab45e91134b6a8399a7b74.json  query-0d19ebf3d2f21ce8f03883a5ad381b3d5728a6a605cb32b31ee0dfc0c6c8789b.json  query-0e290b782a02902d4683a1593f79d994fc30eb384545b95b7c30f00e5becf6e2.json  query-0e7d9a0db3d47b1f2cc5d0d95b54b1a58a4b89c1f468bf065dacdb9d03586fd7.json  query-1128fad973b7432f00e52e0f76eb6371a65135558f15b9f532bc6e60fabca965.json  query-1271c0263e8df70429ad71ed185810d1b31e5615abc686831863fb556b8f325f.json  query-12b1735064486a45e3d68294b543ff9a31e45b09bd36e2fee0b6aaae54aa5422.json  query-17ac601f9378065cafdd5440e83e7ea14a02ab60207a1f53d979a3183751612f.json  query-225da38ec207c2fb314018dd9c9afe5efeaed09b6aa69b6201ae92d7e2d976cf.json  query-25ad59a53363a538541309dce48f4fa16a0b212aa1fdc33e17a3c98aab3b9521.json  query-2810b3ca4648e2cb60f13f8ac5f85ada7b14954504ae60690370ed3157a1fe47.json  query-2e784ad9456fc75694fe0e940640b84d34ac5d89e3c7b5174d0c42cf1c478a8c.json  query-338f7645693fc49675a9abe1166a2d7ff4f6880785db060f70fcf6d328370e7b.json  query-343c3cae10589eeb1d5afcfa0f077773785e0020169dfc0ee8f78821d36e4804.json  query-35956d60e3c422a2ac4b6d7c40daa5045f82490a628c54c074784c245c15337d.json  query-3834190499410a89de5b5d894a263aeb76446f96b8d00e9fd50ac5c8d9eb3e01.json  query-3d5aef44a878f08657086b940e03a09d31906483ce4676b5dd8faa46907a9ad6.json  query-3de41c5676624f53a5e32656655250b6c40eea32b72d61165396ae958019fc33.json  query-3e0baaec80d2cbb90e7fca2348a804b5356f88feb24259485a17d19dd8307372.json  query-3e8cf95cdf4909e0a825b07c132088363d247a6a3578ad804b445b25d8c4e0f1.json  query-3f6e3c6f0647a2c8f52779774b250c96dcf6a1322df10e7d51b600f80e548c01.json  query-3f7060d437d81030db09a8d269e1bb69c1234e2d2bdc385bee8a293243f360f6.json  query-406bd5218e65c4194bbc3a6941699674751af7a550b2b0419dbc71481d2a56f0.json  query-415bce29fc30a4b589f23150e91c2e9f9cd5d88de1daa827f453444a32ff3672.json  query-4831c2b5585781aaaef86e461a7de369421f2b1be32a18caf700b07f0d821dfe.json  query-4b65bbda56929a881170b04f54479fda6714177c92a3ef051eb77ce42e4366ca.json  query-4f1888d29e3b79f7d3780f91d6f70484d9e0a158dfadb878efaaa514eecd0afa.json  query-505475f53ef1f5889c0c2e851dd4c97de4e3584563ed2e4269941ddc932c70a7.json  query-506163d1f0af769735b7d4c3b4b9439b5911c6f2a01d011a9c68d9b43bee5f2e.json  query-514ffb9a1deab5ed9f50fdd1b801e88b91ec124c31626df08d2cc0e8010370d5.json  query-5204c4b27430765bfbed0bbfc490779243edf95d95fc4f05279b49db6ada8125.json  query-557869a6c1adf22ea42bcad280bcd482099c1c83d12f6bf3088b2e35298b0b36.json  query-559e24f14b8ff41545d3ce8f0fcf148971e4de6544432feaf37ae8c8cfae2a7c.json  query-56812fe90b4882b0b634dc4ec3d1ba8ede0f3028f4209640ef4c867ebf4128f5.json  query-58597fa4f92d74426157d673af7051635f2721597c42b20b1943831e2599c638.json  query-5d66774358bb7e4ed72facaf933ab44f9a80766b7ebb5c349a8dff4740f010c9.json  query-5e543387786319bf0caccbc3dda176de9231dd61054aabef712701748ba67bfd.json  (+77 more)
src/backend/config/: config.json
src/backend/migrations/: 20241123141333_init.sql  20241201174751_add_user_admin.sql  20241230184458_add_absent.sql  (+2 more)
(+233 files in other folders)
