[package]
name = "forum_meucci"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["http2"] }
axum-login = "0.16"
http = "1.0"
hyper = "1.0"
password-auth = "1.0"
serde = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.34", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-sessions = { version = "0.13", default-features = false, features = ["signed"] }
thiserror = "2.0"
dotenvy = "0.15"
color-eyre = "0.6"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
axum_thiserror = "0.1"
tower-http = { version = "0.6", features = ["trace", "compression-full", "decompression-full"] }
#serde_json = "1.0.132"
tower-sessions-redis-store = { version = "0.14", features = ["enable-rustls"] }
sysinfo = { version = "0.32", features = ["serde", "system"], default-features = false }
futures = "0.3"
ahash = "0.8"
oauth2 = { version = "4.4", features = ["rustls-tls", "reqwest"], default-features = false }
reqwest = { version = "0.12", features = ["zstd", "rustls-tls", "brotli", "json"] }
openidconnect = "3.5"
utoipa = { version = "5.2", features = ["uuid", "chrono", "axum_extras", "auto_into_responses"] }
utoipa-axum = { version = "0.1" }
utoipa-scalar = { version = "0.2.0" , features = ["axum"]}
serde_json = "1.0.133"

[profile.release]
lto = true
