[package]
name = "forum_meucci"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["http2", "macros"] }
axum-login = "0.17"
http = "1.0"
serde = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "tls-rustls-aws-lc-rs"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.34", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-sessions = { version = "0.14", default-features = false, features = ["signed"] }
thiserror = "2.0"
dotenvy = "0.15"
color-eyre = "0.6"
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
axum_thiserror = "0.1"
tower-http = { version = "0.6", features = ["trace", "compression-full", "decompression-full"] }
tower-sessions-redis-store = { version = "0.16", features = ["enable-rustls"] }
sysinfo = { version = "0.34.2", features = ["serde", "system"] }
futures = "0.3"
ahash = "0.8"
reqwest = { version = "0.12", features = ["zstd", "rustls-tls", "brotli", "json", "http2"], default-features = false }
openidconnect = "4.0"
utoipa = { version = "5.2", features = ["uuid", "chrono", "axum_extras", "auto_into_responses"] }
utoipa-axum = { version = "0.2" }
utoipa-scalar = { version = "0.3", features = ["axum"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["cargo", "derive"] }
csv = "1.3"
indicatif = { version = "0.17", features = ["improved_unicode"] }
tower = "0.5"
tracing-indicatif = "0.3.9"
rust_xlsxwriter = { version = "0.85.0", features = ["serde"] }
chrono-tz = { version = "0.10.1", features = ["serde"] }
restructed = "0.2.1"

[profile.dev.package.backtrace]
opt-level = 3

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.release]
lto = true
